# spaceship-os-game

./: Cargo.toml  README.md  build.rs  shell
nix/: nixpkgs.nix  shell.nix
nix/bear-lib-terminal/: cmake-install.patch  default.nix
src/: main.rs
