[package]
name = "spaceship-os-game-rust"
version = "0.1.0"
authors = ["Daniel Wilson-Thomas <danielwilsonthomas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.cursive]
version = "*"
default-features = false
features = ["blt-backend"]
